--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,14 @@
     else{
 
     }
-  }
+    
 
+  }
+  document.addEventListener("keyup", function(e) {
+        if (e.keyCode === 13) {
+            addItem();
+        }
+    });
 </script>
 
 </html>
